--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,9 @@
 
     <string name="btn_register">Sign Up</string>
     <string name="btn_login">Log In</string>
+    <string name="btn_settings">Settings</string>
+    <string name="btn_capture">Capture</string>
+    <string name="btn_inbox">Trade Requests</string>
 
     <string name="link_to_login">Already Registered? Login Here</string>
     <string name="link_to_register">New User? Sign Up Here</string>
